--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   redis:
-    port: 6789
+    port: 6379
+    host: 127.0.0.1
+    password: redis
   datasource:
     url: jdbc:h2:mem:distributed-lock;MODE=MYSQL;DB_CLOSE_DELAY=-1
     username: user
